# zero2ProdDeux

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  notes.txt  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230225142805_make_status_not_null_in_subscriptions.sql  20230318162402_create_users_table.sql  20230319071956_rename_password_column.sql  20230319105653_add_salt_to_users.sql  20230319133403_remove_salt_from_users.sql  20230326140354_seed_user.sql  20230403144448_create_idempotency_table.sql  20230405120301_create_newsletter_issues_table.sql  20230405121124_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  olddomain.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
